# xaya

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Changes  Makefile.am  README.md  TODO  configure.ac  libnamecoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  good_first_issue.md  gui_issue.md
ci/test/: 06_script_a.sh
cmake/: bitcoin-build-config.h.in
contrib/: gitian-build.py
contrib/auxpow/: getwork-wrapper.py
contrib/auxpow-sizes/: auxpow-sizes.py
contrib/bip34-monitor/: scanBip34.py
contrib/builder-keys/: keys.txt
contrib/devtools/: check-rpc-mappings.py  gen-bitcoin-conf.sh  gen-manpages.py  gen-manpages.sh
contrib/docker/: Dockerfile  entrypoint.sh  xaya.conf
contrib/gitian-descriptors/: assign_DISTNAME  gitian-linux.yml  gitian-osx.yml  gitian-win.yml
contrib/gitian-keys/: keys.txt
contrib/guix/: INSTALL.md  README.md  guix-build  guix-codesign
contrib/init/: README.md  namecoind.conf  namecoind.init  namecoind.openrc  namecoind.openrcconf  namecoind.service  org.namecoin.namecoind.plist  xayad.service
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/namecoin/: convertAddress.py  convertBechAddress.py  convertBechAddress.sh
contrib/seeds/: README.md  generate-seeds.py  nodes_main.txt  nodes_test.txt
contrib/shell/: git-utils.bash
contrib/signet/: miner
contrib/verify-commits/: trusted-keys
doc/: Doxyfile  Doxyfile.in  NamecoinBugs.txt  README.md  REST-interface.md  bitcoin-conf.md  build-osx.md  build-unix.md  gitian-building.md  guix.md  init.md  release-notes-namecoin.md  release-process.md
doc/man/: Makefile.am  namecoin-cli.1  namecoin-qt.1  namecoin-tx.1  namecoin-util.1  namecoin-wallet.1  namecoind.1  xaya-cli.1  xaya-qt.1  xaya-tx.1  xaya-util.1  xaya-wallet.1  xayad.1
doc/xaya/: README.md  addressrestrictions.md  blockchain.md  currencies.md  games.md  interface.md  mining.md  trading.md
qa/pull-tester/: rpc-tests.py  rpc-tests.sh  run-bitcoin-cli  tests-config.sh.in
qa/rpc-tests/: abandonconflict.py  bipdersig-p2p.py  bipdersig.py  bumpfee.py  conflictedbalance.sh  decodescript.py  forknotify.py  fundrawtransaction.py  getauxblock.py  httpbasics.py  keypool.py  maxblocksinflight.py  mempool_coinbase_spends.py  mempool_limit.py  mempool_packages.py  multi_rpc.py  name_expiration.py  name_list.py  name_multisig.py  name_pending.py  name_rawtx.py  name_registration.py  names.py  (+17 more)
share/: setup.nsi.in
src/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  amount.cpp  amount.h  auxpow.cpp  auxpow.h  base58.cpp  base58.h  bitcoin-chainstate.cpp  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util.cpp  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  chimaera-hash.cpp  clientversion.cpp  clientversion.h  coins.cpp  coins.h  core_io.h  core_read.cpp  core_write.cpp  crypter.cpp  dbwrapper.h  deploymentinfo.cpp  headerssync.cpp  (+59 more)
src/qt/test/: CMakeLists.txt  Makefile  paymentservertests.cpp  rpcnestedtests.cpp  test_main.cpp  uritests.cpp  wallettests.cpp
(+658 files in other folders)
