dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=namecoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=namecoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=namecoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=namecoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=namecoin-wallet.1
endif
endif
